# telegram_bot_rocket

./: .gitignore  README.md  maintainable_code.md  manage.py  pyproject.toml  requirements.txt
backend_with/: asgi.py  settings.py  urls.py  wsgi.py
tele/: models.py  urls.py  utils.py  views.py
tele/templates/: index.html
